# x11-portal

./: .gitignore  Cargo.toml  README.md  x11-portal.desktop
src/: main.rs  stream.rs
